<resources>
    <string name="app_name">CoolDictionary</string>
    <string name="searchText"></string>
    <string name="searchBtn">Search</string>
    <string name="search_cool_words_hint">Search cool words</string>
    <string name="playTriviaBtn">Play Trivia</string>
    <string name="viewFavoriteBtn">View Favorited Words</string>
    <string name="historyBtn">History</string>
    <string name="wotdayBtn">World of the Day</string>
    <string name="wordView" />
    <string name="word_title"></string>
    <string name="phoneticView">Phonetic :  </string>
    <string name="wordContentView" />
    <string name="wordTypeView" />
    <string name="useNone"></string>
    <string name="useAdjective">Adjective : \n\n</string>
    <string name="useVerb">Verb : \n\n</string>
    <string name="useNoun">Adverb : \n\n</string>
    <string name="useAdverb">Noun : \n\n</string>
    <string name="usePronoun">Pronoun : \n\n</string>
    <string name="useExclamation">Exclamation : \n\n</string>
    <string name="useAbbreviation">Abbreviation : \n\n</string>
    <string name="useConjunction">Conjunction : \n\n</string>
    <string name="useDeterminer">Determiner : \n\n</string>
    <string name="favoriteSwitch">Favorite</string>
    <string name="errorMeme">ErrorMeme</string>
    <string name="word_card" />
    <string name="historyView">Recent Words</string>
    <string name="favoriteView">Favorite Words</string>
    <string name="wordOfDay" />
    <string name="wodLabel">Word of the day</string>
    <string name="dateView"></string>
    <string name="triviaTitle">Welcome to today\'s trivia question!</string>
    <string name="triviaQ">Question</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="output">Output</string>
    <string name="homeBtn">Home</string>
    <string name="welcome_to_trivia">Welcome to trivia!</string>
    <string name="final_answer">Final Answer?</string>


</resources>
